@@ -64,7 +64,7 @@ fi
 BINDIR=${BK_BINDIR:-"`dirname "$0"`"}
 BK_HOME=${BK_HOME:-"`cd ${BINDIR}/..;pwd`"}
 BK_CONFDIR=${BK_HOME}/conf
-DEFAULT_LOG_CONF=${BK_CONFDIR}/log4j.properties
+DEFAULT_LOG_CONF=${BK_CONFDIR}/log4j2.xml
 
 source ${BK_CONFDIR}/nettyenv.sh
 source ${BK_CONFDIR}/bkenv.sh
@@ -82,8 +82,6 @@ detect_jdk8() {
 
 # default netty settings
 NETTY_LEAK_DETECTION_LEVEL=${NETTY_LEAK_DETECTION_LEVEL:-"disabled"}
-NETTY_RECYCLER_MAXCAPACITY=${NETTY_RECYCLER_MAXCAPACITY:-"1000"}
-NETTY_RECYCLER_LINKCAPACITY=${NETTY_RECYCLER_LINKCAPACITY:-"1024"}
 
 USING_JDK8=$(detect_jdk8)
 
@@ -155,7 +153,7 @@ is_released_binary() {
 find_module_jar_at() {
   DIR=$1
   MODULE=$2
-  REGEX="^${MODULE}[-0-9\\.]*((-[a-zA-Z]*(-[0-9]*)?)|(-SNAPSHOT))?.jar$"
+  REGEX="^${MODULE}-[0-9\\.]*((-[a-zA-Z]*(-[0-9]*)?)|(-SNAPSHOT))?.jar$"
   if [ -d ${DIR} ]; then
     cd ${DIR}
     for f in *.jar; do
@@ -196,13 +194,23 @@ find_module_jar() {
   fi
 
   if [ -z "${MODULE_JAR}" ]; then
-    BUILT_JAR=$(find_module_jar_at ${BK_HOME}/${MODULE_PATH}/build/libs ${MODULE_NAME})
+    BUILT_JAR=$(find_module_jar_at ${BK_HOME}/${MODULE_PATH}/target ${MODULE_NAME})
     if [ -z "${BUILT_JAR}" ]; then
-      echo "${BK_HOME}/${MODULE_PATH}/build/libs" >&2;
       echo "Couldn't find module '${MODULE_NAME}' jar." >&2
-     ## read -p "Do you want me to run \`mvn package -DskipTests\` for you ? (y|n) " answer
+      read -p "Do you want me to run \`mvn package -DskipTests\` for you ? (y|n) " answer
+      case "${answer:0:1}" in
+        y|Y )
+          mkdir -p ${BK_HOME}/logs
+          output="${BK_HOME}/logs/build.out"
+          echo "see output at ${output} for the progress ..." >&2
+          mvn package -DskipTests &> ${output}
+          ;;
+        * )
+          exit 1
+          ;;
+      esac
 
-      BUILT_JAR=$(find_module_jar_at ${BK_HOME}/${MODULE_PATH}/build/libs ${MODULE_NAME})
+      BUILT_JAR=$(find_module_jar_at ${BK_HOME}/${MODULE_PATH}/target ${MODULE_NAME})
     fi
     if [ -n "${BUILT_JAR}" ]; then
       MODULE_JAR=${BUILT_JAR}
@@ -213,19 +221,28 @@ find_module_jar() {
     echo "Could not find module '${MODULE_JAR}' jar." >&2
     exit 1
   fi
-  echo "${MODULE_JAR}"
+  echo ${MODULE_JAR}
   return
 }
 
 add_maven_deps_to_classpath() {
   MODULE_PATH=$1
+  MVN="mvn"
+  if [ "$MAVEN_HOME" != "" ]; then
+    MVN=${MAVEN_HOME}/bin/mvn
+  fi
+
   # Need to generate classpath from maven pom. This is costly so generate it
   # and cache it. Save the file into our target dir so a mvn clean will get
   # clean it up and force us create a new one.
-  f="${BK_HOME}/${MODULE_PATH}/build/classpath.txt"
+  f="${BK_HOME}/${MODULE_PATH}/target/cached_classpath.txt"
+  output="${BK_HOME}/${MODULE_PATH}/target/build_classpath.out"
+
   if [ ! -f ${f} ]; then
-      echo "no classpath.txt found at ${BK_HOME}/${MODULE_PATH}/build"
-      exit 1
+    echo "the classpath of module '${MODULE_PATH}' is not found, generating it ..." >&2
+    echo "see output at ${output} for the progress ..." >&2
+    ${MVN} -f "${BK_HOME}/${MODULE_PATH}/pom.xml" dependency:build-classpath -Dmdep.outputFile="target/cached_classpath.txt" &> ${output}
+    echo "the classpath of module '${MODULE_PATH}' is generated at '${f}'." >&2
   fi
 }
 
@@ -239,7 +256,7 @@ set_module_classpath() {
     echo ${BK_CLASSPATH}
   else
     add_maven_deps_to_classpath ${MODULE_PATH} >&2
-    cat ${BK_HOME}/${MODULE_PATH}/build/classpath.txt
+    cat ${BK_HOME}/${MODULE_PATH}/target/cached_classpath.txt
   fi
   return
 }
@@ -267,37 +284,55 @@ build_cli_jvm_opts() {
 }
 
 build_netty_opts() {
-  echo "-Dio.netty.leakDetectionLevel=${NETTY_LEAK_DETECTION_LEVEL} \
-    -Dio.netty.recycler.maxCapacity.default=${NETTY_RECYCLER_MAXCAPACITY} \
-    -Dio.netty.recycler.linkCapacity=${NETTY_RECYCLER_LINKCAPACITY}"
+  NETTY_OPTS="-Dio.netty.leakDetectionLevel=${NETTY_LEAK_DETECTION_LEVEL} -Dio.netty.tryReflectionSetAccessible=true"
+  # --add-opens does not exist on jdk8
+  if [ "$USING_JDK8" -eq "0" ]; then
+    # Enable java.nio.DirectByteBuffer
+    # https://github.com/netty/netty/blob/4.1/common/src/main/java/io/netty/util/internal/PlatformDependent0.java
+    # https://github.com/netty/netty/issues/12265
+    NETTY_OPTS="$NETTY_OPTS --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
+  fi
+  echo $NETTY_OPTS
 }
 
 build_logging_opts() {
   CONF_FILE=$1
-  LOG_DIR=$2
-  LOG_FILE=$3
-  LOGGER=$4
+  LOG_LEVEL=$2
+  LOG_APPENDER=$3
+  LOG_DIR=$4
+  LOG_FILE=$5
 
-  echo "-Dlog4j.configuration=`basename ${CONF_FILE}` \
-    -Dbookkeeper.root.logger=${LOGGER} \
+  echo "-Dlog4j.configurationFile=`basename ${CONF_FILE}` \
+    -Dbookkeeper.log.root.level=${LOG_LEVEL} \
+    -Dbookkeeper.log.root.appender=${LOG_APPENDER} \
     -Dbookkeeper.log.dir=${LOG_DIR} \
     -Dbookkeeper.log.file=${LOG_FILE}"
 }
 
 build_cli_logging_opts() {
   CONF_FILE=$1
-  LOG_DIR=$2
-  LOG_FILE=$3
-  LOGGER=$4
+  LOG_LEVEL=$2
+  LOG_APPENDER=$3
+  LOG_DIR=$4
+  LOG_FILE=$5
 
-  echo "-Dlog4j.configuration=`basename ${CONF_FILE}` \
-    -Dbookkeeper.cli.root.logger=${LOGGER} \
+  echo "-Dlog4j.configurationFile=`basename ${CONF_FILE}` \
+    -Dbookkeeper.cli.log.root.level=${LOG_LEVEL} \
+    -Dbookkeeper.cli.log.root.appender=${LOG_APPENDER} \
     -Dbookkeeper.cli.log.dir=${LOG_DIR} \
     -Dbookkeeper.cli.log.file=${LOG_FILE}"
 }
 
 build_bookie_opts() {
-  echo "-Djava.net.preferIPv4Stack=true"
+  BOOKIE_OPTS="-Djava.net.preferIPv4Stack=true"
+  # --add-opens does not exist on jdk8
+  if [ "$USING_JDK8" -eq "0" ]; then
+    # enable posix_fadvise usage in the Journal
+    BOOKIE_OPTS="$BOOKIE_OPTS --add-opens java.base/java.io=ALL-UNNAMED"
+    # DirectMemoryCRC32Digest
+    BOOKIE_OPTS="$BOOKIE_OPTS --add-opens java.base/java.util.zip=ALL-UNNAMED"
+  fi
+  echo $BOOKIE_OPTS
 }
 
 find_table_service() {
